test/log/conversion/vextend_v_u16_m.txt
vextend_v_u16_m.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vextend_v_u16_m.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vextend_v_u16_m.c:14:40: warning: backslash and newline separated by space
   14 |  #define data_init(a, b, n, threshold) \
      |                                         
vextend_v_u16_m.c:15:35: warning: backslash and newline separated by space
   15 |      for(int i = 0; i < n; i++) { \
      |                                    
vextend_v_u16_m.c:16:40: warning: backslash and newline separated by space
   16 |              a[i] = random(threshold); \
      |                                         
vextend_v_u16_m.c:17:27: warning: backslash and newline separated by space
   17 |              b[i] = a[i]; \
      |                            
vextend_v_u16_m.c:23:6: warning: no previous prototype for 'vextend_v_u16_m_golden' [-Wmissing-prototypes]
   23 | void vextend_v_u16_m_golden(bool32_t mask,uint32_t *maskoff,uint16_t *a,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vextend_v_u16_m.c: In function 'vextend_v_u16_m_golden':
vextend_v_u16_m.c:25:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   25 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vextend_v_u16_m.c:25:1: note: each undeclared identifier is reported only once for each function it appears in
vextend_v_u16_m.c:25:9: error: expected ';' before 'Line'
   25 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vextend_v_u16_m.c:23:38: warning: unused parameter 'mask' [-Wunused-parameter]
   23 | void vextend_v_u16_m_golden(bool32_t mask,uint32_t *maskoff,uint16_t *a,uint32_t *exp_result) {
      |                             ~~~~~~~~~^~~~
vextend_v_u16_m.c:23:53: warning: unused parameter 'maskoff' [-Wunused-parameter]
   23 | void vextend_v_u16_m_golden(bool32_t mask,uint32_t *maskoff,uint16_t *a,uint32_t *exp_result) {
      |                                           ~~~~~~~~~~^~~~~~~
vextend_v_u16_m.c:23:71: warning: unused parameter 'a' [-Wunused-parameter]
   23 | void vextend_v_u16_m_golden(bool32_t mask,uint32_t *maskoff,uint16_t *a,uint32_t *exp_result) {
      |                                                             ~~~~~~~~~~^
vextend_v_u16_m.c:23:83: warning: unused parameter 'exp_result' [-Wunused-parameter]
   23 | void vextend_v_u16_m_golden(bool32_t mask,uint32_t *maskoff,uint16_t *a,uint32_t *exp_result) {
      |                                                                         ~~~~~~~~~~^~~~~~~~~~
vextend_v_u16_m.c: In function 'main':
vextend_v_u16_m.c:41:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   41 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vextend_v_u16_m.c:16:15: error: subscripted value is neither array nor pointer nor vector
   16 |              a[i] = random(threshold); \
      |               ^
vextend_v_u16_m.c:42:5: note: in expansion of macro 'data_init'
   42 |     data_init(maskoff, exp_maskoff, 16*2, 0xffffffff);
      |     ^~~~~~~~~
vextend_v_u16_m.c:17:22: error: subscripted value is neither array nor pointer nor vector
   17 |              b[i] = a[i]; \
      |                      ^
vextend_v_u16_m.c:42:5: note: in expansion of macro 'data_init'
   42 |     data_init(maskoff, exp_maskoff, 16*2, 0xffffffff);
      |     ^~~~~~~~~
vextend_v_u16_m.c:46:28: error: incompatible type for argument 1 of 'vextend_v_u16_m_golden'
   46 |     vextend_v_u16_m_golden(exp_mask,exp_maskoff,exp_a,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vextend_v_u16_m.c:23:38: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   23 | void vextend_v_u16_m_golden(bool32_t mask,uint32_t *maskoff,uint16_t *a,uint32_t *exp_result) {
      |                             ~~~~~~~~~^~~~
vextend_v_u16_m.c:49:14: warning: implicit declaration of function 'vextend_v_u16_m'; did you mean 'vext_v_u16_m'? [-Wimplicit-function-declaration]
   49 |     result = vextend_v_u16_m(mask,maskoff,a);
      |              ^~~~~~~~~~~~~~~
      |              vext_v_u16_m
vextend_v_u16_m.c:49:14: error: incompatible types when assigning to type 'uint32x16x2_t' from type 'int'
vextend_v_u16_m.c:53:35: error: subscripted value is neither array nor pointer nor vector
   53 |         if(exp_result[i] != result[i]) {
      |                                   ^
vextend_v_u16_m.c:54:79: error: subscripted value is neither array nor pointer nor vector
   54 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vextend_v_u16_m.c:38:19: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   38 |     uint32x16x2_t result = {0};
      |                   ^~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vextend_v_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vextend_v_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vextend_v_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vextend_v_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed